<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.7"
        android:scaleY="1.7"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/my_time_picker_style"/>
    <Button
        android:id="@+id/btn_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/btn_margBottom"
        android:backgroundTint="@color/next"
        android:text="@string/time_onbord_complite"
        android:textSize="@dimen/s16p"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/t16p"
        android:layout_marginEnd="@dimen/t16p"
        android:paddingTop="@dimen/t16p"
        android:paddingBottom="@dimen/t16p"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:stateListAnimator="@null"/>

    <TextView
        android:id="@+id/txt_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/time_onbord_txt"
        android:textColor="@color/black"
        android:layout_marginBottom="24dp"
        />

    <TextView
        android:id="@+id/text1_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/txt_marg_top"
        android:text="@string/txt3_time_onbord"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt2_time_onbord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1_time"
        android:gravity="center"
        android:layout_marginTop="@dimen/txt_marg_top"
        android:layout_marginHorizontal="@dimen/size_42"
        />
</androidx.constraintlayout.widget.ConstraintLayout>