<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_one_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/t16p"
        android:layout_marginEnd="@dimen/t16p"
        android:layout_marginBottom="@dimen/btn_margBottom"
        android:backgroundTint="@color/next"
        android:paddingTop="@dimen/t16p"
        android:paddingBottom="@dimen/t16p"
        android:stateListAnimator="@null"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="@dimen/t16p"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_control"
        android:textColor="@color/black"
        android:textSize="@dimen/sp22"
        app:layout_constraintBottom_toTopOf="@+id/textView_step1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView_step1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start18"
        android:layout_marginEnd="@dimen/start18"
        android:layout_marginBottom="78dp"
        android:gravity="center"
        android:text="@string/txt_step1"
        android:textColor="@color/black"
        android:textSize="@dimen/t16p"
        app:layout_constraintBottom_toTopOf="@+id/btn_one_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_one_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/s16p"
        android:clickable="true"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:textSize="@dimen/s16p"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textView_step1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_onbord_one" />
</androidx.constraintlayout.widget.ConstraintLayout>